--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,107 @@
 }
 
 body {
-  background: linear-gradient(to bottom, rgb(0 139 125) 15%, rgb(212 214 207) 0%);
-  height:100vh;
+  background: linear-gradient(
+    to bottom,
+    rgb(0 139 125) 15%,
+    rgb(212 214 207) 0%
+  );
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.main-box{
+/* //-------------------------------------------------------// */
+.main-box {
   width: 80%;
   height: 95%;
-  background-color: red;
+  display: flex;
+}
+/* //-------------------------------------------------------// */
+/* BOX A DESTRA */
+
+.right-box {
+  width: 60%;
+  height: 100%;
+  background-color: rgb(217, 255, 0);
 }
 
+/* //-------------------------------------------------------// */
+/* BOX A SINISTRA */
 
+.left-box {
+  width: 40%;
+  height: 100%;
+  background-color: white;
+  border-right: 0.5px solid grey;
+  /* display: flex;
+  flex-direction: column; */
+}
+
+.top-user-bar {
+  width: 100%;
+  height: 9%;
+  background-color: rgb(234 234 234);
+  display: flex;
+  justify-content: space-between;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+}
+
+.user img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+.user span {
+  font-weight: 500;
+  padding-left: 10px;
+}
+
+.user-icon {
+  display: flex;
+  align-items: center;
+}
+
+.fa-solid {
+  margin-right: 18px;
+  font-size: 20px;
+  color: grey;
+  cursor: pointer;
+}
+
+.notification-alert {
+  width: 100%;
+  height: 10%;
+  background-color: rgb(144 218 252);
+  display: flex;
+
+  align-items: center;
+}
+
+.fa-bell-slash {
+  font-size: 25px;
+  padding: 10px;
+  border-radius: 50%;
+  color: rgb(144 218 252);
+  background-color: white;
+  margin-left: 10px;
+}
+
+.text-noti-up{
+  font-weight: 500;
+}
+
+.text-noti-down{
+  font-size: 13px;
+  color: grey;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* //-------------------------------------------------------// */
