--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(250 250 250);
 }
 
 .search-button {
@@ -137,9 +138,41 @@ body {
   padding-bottom: 5px;
   padding-left: 10px;
 }
-.search-bar .fa-solid{
-  margin-right: 0px!important;
+.search-bar .fa-solid {
+  margin-right: 0px !important;
+}
+.contact-box {
+  height: calc(100% - 26%);
+  overflow-y: scroll;
+  cursor: pointer;
+  
+}
+
+.user-chat {
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgb(231, 230, 230);
+}
+.orario {
+  margin-right: 10px;
+  margin-top: 10px;
+}
+/* //-------------------------------------------------------// */
+/* CLASSE active  */
+.user-chat-active {
+  background-color: rgb(211, 213, 213);
+}
+/* //-------------------------------------------------------// */
+/* CLASSE hover  */
+.user-chat:hover {
+  background-color: rgb(223, 227, 227);
 }
 
 
+
+
+
 /* //-------------------------------------------------------// */
+/* //-------------------------------------------------------// */
+/* BOX A Destra */
