--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,6 @@ body {
   display: flex;
 }
 /* //-------------------------------------------------------// */
-/* BOX A DESTRA */
-
-.right-box {
-  width: 60%;
-  height: 100%;
-  background-color: rgb(217, 255, 0);
-}
 
 /* //-------------------------------------------------------// */
 /* BOX A SINISTRA */
@@ -53,6 +46,7 @@ body {
 .user {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .user img {
@@ -145,7 +139,6 @@ body {
   height: calc(100% - 26%);
   overflow-y: scroll;
   cursor: pointer;
-  
 }
 
 .user-chat {
@@ -153,10 +146,14 @@ body {
   display: flex;
   justify-content: space-between;
   border: 1px solid rgb(231, 230, 230);
+  position: relative;
 }
 .orario {
   margin-right: 10px;
   margin-top: 10px;
+  position: absolute;
+  right: 0;
+  align-self: flex-start;
 }
 /* //-------------------------------------------------------// */
 /* CLASSE active  */
@@ -169,10 +166,63 @@ body {
   background-color: rgb(223, 227, 227);
 }
 
-
-
-
-
 /* //-------------------------------------------------------// */
 /* //-------------------------------------------------------// */
 /* BOX A Destra */
+.right-box {
+  width: 60%;
+  height: 100%;
+  background-image: url(../img/mine.jpg);
+}
+
+.conversation-box {
+  max-width: 100%;
+  height: 83%;
+}
+
+.message-box {
+  height: calc(100% - 83% - 60px - 8px);
+  background-color: rgb(243 238 234);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.my-msg-box {
+  width: 80%;
+  height: 60%;
+  border-radius: 5px;
+  border: none;
+}
+
+.fa-face-smile {
+  font-size: 20px;
+}
+
+.message-box .fa-solid {
+  margin-right: 0px !important;
+}
+.received {
+  max-width: 80%;
+  margin: 6px;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  padding-right: 30px;
+  margin-left: 40px;
+  float: left;
+  clear: both;
+}
+
+.sent {
+  max-width: 80%;
+  margin: 10px;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  padding-right: 30px;
+  margin-right: 40px;
+  float: right;
+  background-color: rgb(204 245 175);
+  clear: both;
+  text-align: start;
+}
