--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1100px;
 }
 /* //-------------------------------------------------------// */
 .main-box {
@@ -37,7 +38,7 @@ body {
 
 .top-user-bar {
   width: 100%;
-  height: 9%;
+  height: 66px;
   background-color: rgb(234 234 234);
   display: flex;
   justify-content: space-between;
@@ -75,7 +76,7 @@ body {
 
 .notification-alert {
   width: 100%;
-  height: 10%;
+  height: 70px;
   background-color: rgb(144 218 252);
   display: flex;
 
@@ -103,6 +104,7 @@ body {
 }
 
 .search-bar {
+  height: 50px;
   width: 95%;
   margin: 0 auto;
   padding-top: 10px;
@@ -117,7 +119,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 15%;
+  height: 100%;
   width: 18%;
   border: 1px solid rgb(231, 230, 230);
   padding-top: 5px;
@@ -127,7 +129,7 @@ body {
 .text-search {
   width: 82%;
   border: 1px solid rgb(231, 230, 230);
-  height: 15%;
+  height: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
@@ -136,7 +138,7 @@ body {
   margin-right: 0px !important;
 }
 .contact-box {
-  height: calc(100% - 26%);
+  height: calc(100% - 66px - 70px - 50px);
   overflow-y: scroll;
   cursor: pointer;
 }
@@ -149,6 +151,7 @@ body {
   position: relative;
 }
 .orario {
+  font-size: 12px;
   margin-right: 10px;
   margin-top: 10px;
   position: absolute;
@@ -173,21 +176,25 @@ body {
   width: 60%;
   height: 100%;
   background-image: url(../img/mine.jpg);
+  position: relative;
 }
 
 .conversation-box {
-  max-width: 100%;
+  width: 100%;
   height: 83%;
   overflow-y: scroll;
-
 }
 
 .message-box {
-  height: calc(100% - 83% - 60px - 8px);
+  height: 60px;
   background-color: rgb(243 238 234);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 .my-msg-box {
   width: 80%;
@@ -231,27 +238,27 @@ body {
   position: relative;
 }
 
-.sent-chevron{
+.sent-chevron {
   position: absolute;
   top: 0;
   right: 4px;
   display: none;
 }
 
-.sent-chevron .fa-solid{
-  margin-right: 0!important;
+.sent-chevron .fa-solid {
+  margin-right: 0 !important;
   font-size: 15px;
   cursor: pointer;
 }
 
-.received:hover .sent-chevron{
+.received:hover .sent-chevron {
   display: block;
 }
-.sent:hover .sent-chevron{
+.sent:hover .sent-chevron {
   display: block;
 }
 
-.menu-mex{
+.menu-mex {
   position: absolute;
   background-color: white;
   padding: 10px;
@@ -260,4 +267,29 @@ body {
   font-weight: normal;
   width: 150px;
   z-index: 10;
+  display: none;
 }
+
+.sent .menu-mex{
+  right: 0;
+}
+
+.sent-chevron:hover .menu-mex {
+  display: block;
+}
+
+.fa-ellipsis-vertical:hover .menu-mex {
+  display: block;
+  right: 10px;
+}
+
+
+
+.mex-time{
+  font-size: 10px;
+  text-align: end;
+  position: relative;
+  right: -25px;
+  
+}
+
